--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.18.0",
     "uuid": "^9.0.1"
   },
